# HeatTransfer

./: CMakeLists.txt  README.md  main.cpp
src/: heat_transfer_algorithm.cpp  heat_transfer_algorithm.h  solution.cpp  solution.h  solution4_12.cpp  solution4_6.cpp
